[package]
name = "roguelite_mages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.amethyst]
version = "0.15.3"
features = ["vulkan"]

[dependencies]
log = { version = "0.4.17", features = ["serde"] }